--- a/public/index.html
+++ b/public/index.html
@@ -12,30 +12,30 @@ Drop us a msg at hello[at]streamflow.finance -->
     <meta charset="utf-8">
     <link rel="icon" href="%PUBLIC_URL%/icon/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#18a2d9">
-    <meta name="description" content="A free and open source decentralized streaming payments platform built on Solana.">
-    <meta name="keywords" content="streamflow, defi, finance, solana, timelock, real-time, decentralized, blockchain, payments, crypto">
+    <meta name="theme-color" content="#00b1ff">
+    <meta name="description" content="A Decentralized streaming payments platform built on Solana.">
+    <meta name="keywords" content="fyfy, defi, finance, solana, timelock, real-time, decentralized, blockchain, payments, crypto">
 
 
     <!-- Open Graph for social networks -->
-    <meta property="og:title" content="StreamFlow Finance">
-    <meta property="og:description" content="A free and open source decentralized streaming payments platform built on Solana.">
+    <meta property="og:title" content="FYFY Finance">
+    <meta property="og:description" content="A Decentralized streaming payments platform built on Solana.">
     <meta property="og:image" content="%PUBLIC_URL%/icon/logo-full.png">
     <meta property="og:url" content="https://streamflow.finance">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@streamflow_fi">
-    <meta name="twitter:title" content="StreamFlow Finance">
-    <meta name="twitter:description" content="A free and open source decentralized streaming payments platform built on Solana.">
+    <meta name="twitter:site" content="@fyfyio">
+    <meta name="twitter:title" content="Fyfy Finance">
+    <meta name="twitter:description" content="A Decentralized streaming payments platform built on Solana.">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon/logo192.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>Streaming Payments | StreamFlow</title>
+    <title>Streaming Payments | FyfyFinance</title>
     <style>
         .loader {
             border: 10px solid transparent;
-            border-top: 10px solid #18a2d9;
-            border-bottom: 10px solid #18a2d9;
-            border-radius: 50%;
+            border-top: 10px solid #00b1ff;
+            border-bottom: 10px solid #00b1ff;
+            border-radius: 15%;
             width: 50px;
             height: 50px;
             animation: spin 1s linear infinite;
