--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,14 @@ You love to look under the hood, huh? We, do, too. :)
 Wanna connect with like-minded geeks?
 Perhaps wanna BUIDL things 99% of the people never heard of?
 
-Drop us a msg at hello[at]streamflow.finance -->
+Drop us a msg at developers[at]fyfy.io -->
 <html lang="en" class="min-h-screen bg-gray-900">
+
 <head>
     <meta charset="utf-8">
     <link rel="icon" href="%PUBLIC_URL%/icon/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#00b1ff">
+    <meta name="theme-color" content="#004BAF">
     <meta name="description" content="A Decentralized streaming payments platform built on Solana.">
     <meta name="keywords" content="fyfy, defi, finance, solana, timelock, real-time, decentralized, blockchain, payments, crypto">
 
@@ -21,37 +22,43 @@ Drop us a msg at hello[at]streamflow.finance -->
     <meta property="og:title" content="FYFY Finance">
     <meta property="og:description" content="A Decentralized streaming payments platform built on Solana.">
     <meta property="og:image" content="%PUBLIC_URL%/icon/logo-full.png">
-    <meta property="og:url" content="https://streamflow.finance">
+    <meta property="og:url" content="https://stream.fyfy.app">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@fyfyio">
-    <meta name="twitter:title" content="Fyfy Finance">
+    <meta name="twitter:title" content="Fyfy Stream">
     <meta name="twitter:description" content="A Decentralized streaming payments platform built on Solana.">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon/logo192.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>Streaming Payments | FyfyFinance</title>
+    <title>Streaming Payments | Fyfy</title>
     <style>
         .loader {
             border: 10px solid transparent;
-            border-top: 10px solid #00b1ff;
-            border-bottom: 10px solid #00b1ff;
+            border-top: 10px solid #004BAF;
+            border-bottom: 10px solid #004BAF;
             border-radius: 15%;
             width: 50px;
             height: 50px;
             animation: spin 1s linear infinite;
             margin: 30px auto auto;
         }
-
+        
         @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
         }
     </style>
 </head>
+
 <body>
-<noscript>Please enable JavaScript to run this app.</noscript>
-<div id="root">
-    <div class="loader"></div>
-</div>
+    <noscript>Please enable JavaScript to run this app.</noscript>
+    <div id="root">
+        <div class="loader"></div>
+    </div>
 </body>
+
 </html>
